// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ssr translations should render en 1`] = `
SCRIPTS: [
  "http://127.0.0.1:8313/runtime.js",
  "http://127.0.0.1:8313/5.js",
  "http://127.0.0.1:8313/main.js",
  "http://127.0.0.1:8313/en-translations.js",
]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="en-translations"
      rel="preload"
      as="script"
      href="scripts[3]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Hello sku
        Company name
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [1]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["en-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="en-translations"
      src="scripts[3]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr translations should render en-PSEUDO 1`] = `
SCRIPTS: [
  "http://127.0.0.1:8313/runtime.js",
  "http://127.0.0.1:8313/5.js",
  "http://127.0.0.1:8313/main.js",
  "http://127.0.0.1:8313/en-PSEUDO-translations.js",
]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="en-PSEUDO-translations"
      rel="preload"
      as="script"
      href="scripts[3]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        [Ḩẽẽẽƚƚööö šķǚǚǚ]
        [Çööm̂ƥăăกี้ýý กี้ăăm̂ẽẽ]
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["en-PSEUDO-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="en-PSEUDO-translations"
      src="scripts[3]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`ssr translations should render fr 1`] = `
SCRIPTS: [
  "http://127.0.0.1:8313/runtime.js",
  "http://127.0.0.1:8313/5.js",
  "http://127.0.0.1:8313/main.js",
  "http://127.0.0.1:8313/fr-translations.js",
]
CSS: []
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[0]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
      crossorigin="anonymous"
    >
    <link
      data-chunk="fr-translations"
      rel="preload"
      as="script"
      href="scripts[3]"
      crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div>
        Bonjour sku
        บริษัท
      </div>
    </div>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
      crossorigin="anonymous"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
      crossorigin="anonymous"
    >
      {"namedChunks":["fr-translations"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[0]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
      crossorigin="anonymous"
    >
    </script>
    <script
      async
      data-chunk="fr-translations"
      src="scripts[3]"
      crossorigin="anonymous"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
